<resources>
    <string name="app_name">UI-Dashboard</string>
    <string name="lufthansa">Skuygo</string>
    <string name="flying">flying</string>
    <string name="to">to ?</string>
    <string name="WhereAreYou">Where are you</string>
    <string name="enter_your_destination">Enter your destination ...</string>
    <string name="all">All</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="_31_March_09_30">31 March 09.30</string>
    <string name="las">LAS</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="_11_00">11.00</string>
    <string name="sfo">SFO</string>
    <string name="san_francisco">San Francisco</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="paris">Paris</string>
    <string name="singapura">Singapura</string>
    <string name="indonesia">Indonesia</string>
    <string name="sedney">Sedney</string>
    <string name="hi">Hi,</string>
    <string name="rahman">Rahman</string>
    <string name="hello">Hello !</string>
    <string name="search_here">Search here ...</string>
</resources>