<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="@dimen/_254sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/kotlin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

    <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/profile_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rahman"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_photo"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:cardCornerRadius="@dimen/_50sdp"
        app:cardElevation="@dimen/_10sdp"
        app:cardBackgroundColor="@color/colorBackgroundCard"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/search_here"
                android:textColorHint="@color/colorSub"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_108sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorSub" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/right_next"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_search"
            app:tint="@color/colorSub" />

        <TextView
            android:id="@+id/text_All"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/colorSub"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@id/right_next"
            app:layout_constraintEnd_toStartOf="@id/right_next"
            app:layout_constraintTop_toTopOf="@id/right_next" />

        <TextView
            android:id="@+id/textPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:text="@string/popular"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/card_search" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintTop_toBottomOf="@id/textPopular"
        app:layout_constraintVertical_bias="0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_112sdp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_112sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/_112sdp"
                    android:layout_height="@dimen/_112sdp"
                    android:src="@drawable/java"
                    app:riv_corner_radius="@dimen/_8sdp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_112sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/_112sdp"
                    android:layout_height="@dimen/_112sdp"
                    android:src="@drawable/python"
                    app:riv_corner_radius="@dimen/_8sdp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_112sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/_112sdp"
                    android:layout_height="@dimen/_112sdp"
                    android:src="@drawable/c_sharp"
                    app:riv_corner_radius="@dimen/_8sdp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_112sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/_112sdp"
                    android:layout_height="@dimen/_112sdp"
                    android:src="@drawable/kotlin_2"
                    app:riv_corner_radius="@dimen/_8sdp" />

            </FrameLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:backgroundColor="@color/colorBackgroundDark"
        app:iconSize="@dimen/_22sdp"
        app:iconTint="@color/colorIcon"
        app:iconTintActive="@color/white"
        app:indicatorColor="@color/colorIcon"
        app:indicatorRadius="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation"/>

</androidx.constraintlayout.widget.ConstraintLayout>